# logr

./: .eslintrc.cjs  .gitignore  .mcp.json  .prettierignore  .prettierrc  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DAILY_LOG.md  LICENSE  README.md  TODO.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
.husky/: pre-commit
dev-logs/: 2026-01-06.md
src/: App.vue  LogWindow.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/application/: mod.rs  state.rs
src-tauri/src/application/commands/: mod.rs  window_commands.rs
src-tauri/src/application/events/: mod.rs
src-tauri/src/domain/: mod.rs
src-tauri/src/domain/log_watching/: mod.rs  ports.rs
src-tauri/src/domain/log_watching/entities/: log_entry.rs  log_source.rs  mod.rs
src-tauri/src/domain/log_watching/services/: mod.rs
src-tauri/src/domain/log_watching/value_objects/: file_path.rs  log_level.rs  mod.rs
src-tauri/src/domain/parsing/: laravel.rs  mod.rs  traits.rs
src-tauri/src/infrastructure/: mod.rs
src-tauri/src/infrastructure/file_system/: file_watcher.rs  mod.rs
src-tauri/src/infrastructure/storage/: mod.rs
src/application/stores/: logStore.ts  presetStore.ts  settingsStore.ts  (+1 more)
src/assets/: main.css
src/test/: index.ts  mocks.ts  render.ts  setup.ts
src/types/: index.ts
(+68 files in other folders)
