[package]
name = "logr"
version = "0.2.0"
description = "A modern, beautiful log tailing application"
authors = ["Terje"]
license = "MIT"
repository = "https://github.com/ekstremedia/logr"
edition = "2021"
rust-version = "1.80"

[lib]
name = "logr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "logr"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-mcp-bridge = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
notify = "6"
glob = "0.3"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

